docs/config_examples/NodePortLocal/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    nodeportlocal.antrea.io/enabled: "true"
  labels:
    app: f5-hello-world
  name: f5-hello-world
spec:
  ports:
    - name: f5-hello-world
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: f5-hello-world
  type: ClusterIP
