docs/config_examples/NodePortLocal/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress1
  namespace: cis
  annotations:
    # Provide an IP address for the BIG-IP Virtual Server.
    virtual-server.f5.com/ip: "10.106.32.11"
    # Specify the BIG-IP partition containing the virtual server
    virtual-server.f5.com/partition: "testcis"
spec:
  # Provide the IngressClassName as "f5"
  ingressClassName: f5
  defaultBackend:
    # The name of the Kubernetes Service you want to expose to external traffic
    service:
      name: f5-hello-world
      port:
        number: 8080
